# libev

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md  amalgamate.lua  amalgamate.py  annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  ev.c  ev.h  ev_8h.html  ev_8h.js  ev_8h_source.html  ev_8h_structev__read.js  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__EV__ALLOCATOR.html  group__EV__ASYNC.html  group__EV__DEFINE.html  group__EV__ERRNO.html  group__EV__EVENT__LOOP.html  group__EV__FILESYSTEM.html  group__EV__HANDLE.html  group__EV__HANDLE.js  (+32 more)
.github/workflows/: amalgamate_check.yml  ci_unix.yml  ci_win.yml  codeql-analysis.yml  doxygen.yml
docs/: Doxyfile
example/: CMakeLists.txt  tcp_echo_server.c
include/: ev.h
include/ev/: allocator.h  async.h  atomic.h  backend.h  backend_unix.h  backend_win.h  buf.h  buf_forward.h  defines.h  defs.h  errno.h  expose.h  file.h  file_forward.h  fs.h  fs_forward.h  handle.h  ipc-protocol.h  list.h  loop.h  loop_forward.h  map.h  map_low.h  misc.h  mutex.h  once.h  os.h  os_unix.h  os_win.h  pipe.h  pipe_forward.h  process.h  process_forward.h  queue.h  request.h  request_forward.h  sem.h  shdlib.h  shm.h  shmem.h  (+17 more)
lua/: CMakeLists.txt
lua/include/: ev.lua.h
lua/src/: channel.lua.c  channel.lua.h  ev.lua.c  ev.lua.internal.h  fs.lua.c  misc.lua.c  misc.lua.h  pipe.lua.c  pipe.lua.h  process.lua.c  promise.lua.c  tcp.lua.c  udp.lua.c
lua/test/: channel.c  file.c  loop.c  misc.c  process.c  promise.c  strerror.c  tcp.c  test.lua.c  test.lua.h  timer.c  udp.c
search/: all_1b.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_1.js  functions_0.js  typedefs_0.js  variables_1.js  variables_10.js  variables_2.js  variables_3.js  variables_4.js
src/: allocator.c  allocator.h  async.c  async.h  defs.h  ev-common.c  ev-common.h  ev-platform.h  ev.c  file-common.c  file-common.h  fs-common.c  fs-common.h  fs.c  fs.h  handle.c  handle.h  list.c  log.c  log.h  loop.c  loop.h  map.c  map_low.c  misc.c  misc.h  pipe-common.c  pipe-common.h  pipe.c  pipe.h  queue.c  ringbuffer.c  ringbuffer.h  shmem-common.c  shmem.c  shmem.h  thread_pool.c  threadpool.c  threadpool.h  timer.c  (+11 more)
src/ev/: allocator.c  allocator.h  assert.c  assert_internal.h  async.h  async_internal.h  atomic.c  atomic_internal.h  defs.h  errno.c  fs.c  fs.h  fs_internal.h  handle.c  handle_internal.h  list.c  log.c  log.h  loop.c  loop.h  loop_internal.h  map.c  misc.c  misc.h  misc_internal.h  pipe.c  pipe.h  pipe_internal.h  queue.c  ringbuffer.c  ringbuffer.h  shmem.c  shmem.h  threadpool.c  threadpool.h  timer.c  timer.h  timer_internal.h  udp.c  udp.h  (+2 more)
src/lua/: README.md  ev.lua.c  ev.lua.internal.h  fs.lua.c  fs.lua.h  misc.lua.c  misc.lua.h  process.lua.c  process.lua.h  promise.lua.c  promise.lua.h  tcp.lua.c  tcp.lua.h  timer.lua.c  timer.lua.h  udp.lua.c  udp.lua.h
src/unix/: async.c  async.h  async_unix.c  async_unix.h  file.c  fs.c  fs_unix.c  io.c  io.h  io_unix.c  io_unix.h  loop.c  loop.h  loop_unix.c  loop_unix.h  misc_unix.c  misc_unix.h  mutex.c  mutex_unix.c  once.c  once_unix.c  pipe.c  pipe_unix.c  process.c  (+24 more)
test/: CMakeLists.txt  main.c  task.h  test-once.c  test-timer.c  test.c  test.h  test_async.c  test_buf.c  test_ipv4_addr.c  test_once.c  test_pipe.c  test_tcp_accept.c  test_tcp_bind.c  test_tcp_echo_server.c  test_tcp_listen.c  test_tcp_push_server.c  test_timer.c  test_timer_exit_in_callback.c  test_timer_stop_loop.c  test_timer_stop_loop_in_callback.c
test/cases/: async.c  buf.c  fs.c  fs_mmap.c  fs_mmap_offset.c  fs_seek.c  ipv4_addr.c  loop_empty.c  misc_page_size.c  misc_random.c  mutex.c  pipe_data_mode.c  pipe_ipc_mode_dgram.c  pipe_ipc_mode_tcp_handle.c  pipe_make_block.c  process.c  process.redirect_file.c  shmem.c  tcp_close_in_middle.c  tcp_connect_non_exist.c  tcp_idle_client.c  tcp_listen.c  tcp_push_server.c  tcp_static_initializer.c  threadpool.c  timer_exit_in_callback.c  timer_normal.c  timer_stop_loop_in_callback.c  udp_bind.c  udp_connect.c  udp_multicast_interface.c  udp_ttl.c  version.c
test/cases/c/: async.c  fs.c  fs_seek.c  list.c  once.c  pipe_data_mode.c  pipe_ipc_mode_dgram.c  pipe_make_block.c  process.c  process.redirect_file.c  shdlib.c  shm.c  tcp_close_in_middle.c  tcp_connect_non_exist.c  threadpool.c  udp_bind.c  udp_connect.c
test/cases/lua/: benchmark_binary_trees.c  benchmark_fannkuch_redux.c  channel.c  file.c  loop.c  misc.c  process.c  promise.c  strerror.c  tcp.c  test.lua.c  test.lua.h  timer.c  udp.c
test/src/: main.c  test.c  test.h
test/src/cases/: async.c  buf.c  file.c  fs.c  ipv4_addr.c  list.c  loop_empty.c  mutex.c  once.c  pipe.c  pipe_close.c  pipe_data_mode.c  pipe_ipc_mode_dgram.c  pipe_ipc_mode_tcp_handle.c  pipe_ipc_transfer_tcp_in_same_process.c  pipe_make_block.c  process.c  process.redirect_file.c  queue.c  ringbuffer.c  shm.c  shm_memset.c  tcp.c  tcp_connect_non_exist.c  tcp_idle_client.c  tcp_listen.c  tcp_push_server.c  tcp_static_initializer.c  threadpool.c  timer.c  timer_exit_in_callback.c  timer_normal.c  timer_stop_loop_in_callback.c  udp_bind.c  udp_connect.c  udp_multicast_interface.c  udp_ttl.c  version.c
test/src/tools/: echoserver.h  help.c  init.c  ls.c  memcheck.c  memcheck.h  pwd.c
test/src/type/: __init__.h  ev_loop_t.c  ev_loop_t.h  ssize_t.c  ssize_t.h
test/src/utils/: config.c  config.h  file.c  file.h  hash.c  memcheck.c  memcheck.h  random.c  random.h  sockpair.c
test/tools/: __init__.c  __init__.h  echoserver.c  eolcheck.c  eolcheck.h  help.c  help.h  init.c  init.h  ls.c  ls.h  pwd.c  pwd.h  tabcheck.c
test/type/: __init__.c  __init__.h  ev_loop_t.c  ssize_t.c  ssize_t.h
test/utils/: config.c  config.h  file.c  file.h  hash.h  memcheck.c  memcheck.h  random.c  random.h  sockpair.c  sockpair.h  str.c  str.h
tool/: CMakeLists.txt  amalgamate.c  function.c  function.h
(+120 files in other folders)
